// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map Control Map Maxi custom min/max zoom 1`] = `
Object {
  "map-max-zoom": 6,
  "map-min-zoom": 3,
}
`;

exports[`Map Control Map Maxi custom min/max zoom 2`] = `
Object {
  "map-zoom": 4,
}
`;

exports[`Map Control Map Maxi custom min/max zoom 3`] = `
Object {
  "map-zoom": 3,
}
`;

exports[`Map Control Map Maxi custom min/max zoom 4`] = `
Object {
  "map-zoom": 5,
}
`;
